--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1546,3 +1546,22 @@ section {
   font-size: 13px;
   color: #fff;
 }
+
+.contact-support {
+  text-align: right;
+}
+.contact-support .phone {
+  color: #fff;
+  font-size: 12px;
+  margin: 0;
+}
+
+.contact-support  .email {
+  color: #fff;
+  font-size: 16px;
+  margin: 0;
+}
+
+.swiper-slide {
+  text-align: center;
+}
