--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1016,7 +1016,7 @@ section {
 --------------------------------------------------------------*/
 .testimonials {
   padding: 80px 0;
-  background: url("../img/testimonials-bg.jpg") no-repeat;
+  background: url("../img/feedback.jpg") no-repeat;
   background-position: center center;
   background-size: cover;
   position: relative;
